Tela inicial feita, se alguem conseguir alinhar o select com a imagem do lado eu agradeço

--- a/grupo/Sites/index.html
+++ b/grupo/Sites/index.html
@@ -16,7 +16,36 @@
 </head>
 
 <body>
-    <nav class="d-none"></nav>
+    <nav class="navbar">
+        <ul>
+            <img src="./src/logo-icon.png">
+            <li class="agora">
+            <a href="#">Home</a>
+            </li>
+            <li>
+                <a href="#">Nossa Missão</a>
+            </li>
+            <li>
+                <a href="#">Relatos</a>
+            </li>
+            <li>
+                <a href="#">Contato</a>
+            </li>
+        </ul>
+        <ul class="acesso">
+            <li><img height="40px" src="https://images.vexels.com/media/users/3/188941/isolated/preview/755b411a7e27a783044993b1e085fbe4-curso-do-planeta-terra-colorida.png"><select name="" id="" class="idioma">
+                <option value="BRA">PT-BR</option>
+                <option value="ESP">ESP</option>
+                <option value="ING">ING</option>
+            </select></li>
+            <li class="login">
+                <a href="login.html">Login</a>
+            </li>
+            <li class="cadastro">
+                <a href="cadastro.html">Cadastro</a>
+            </li>
+        </ul>
+    </nav>
     <div class="container container-banner">
         <div class="banner-fundo">
             <div class="efeito1"></div>
@@ -24,7 +53,11 @@
             <div class="efeito3"></div>
         </div>
         <div class="banner-escrita">
-            <h1>escreva aq</h1>
+            <h1>Troust<span>Solution</span></h1>
+            <h2>Somos uma equipe de desenvolvimento, para auxiliar os <br>truticultores a terem uma receita maior:</h2>
+            <div class="botao-saíba">
+                <a href="#">Saíba Mais     <img height="10px" src="https://static.vecteezy.com/system/resources/thumbnails/045/546/602/small_2x/white-arrow-road-sign-colorful-transparent-png.png"></a>
+            </div>
         </div>
 
     </div>
