Atualizando tela de contato

--- a/grupo/Sites/index.html
+++ b/grupo/Sites/index.html
@@ -145,6 +145,47 @@
     </div>
     <div class="container"></div>
     <div class="container"></div>
+
+    <div class="container">
+        <div class="container-contatoGeral">
+            <h2>Contato</h2>
+            <div class="container-contato">
+                <div class="contato">
+                    <h3>Fale conosco</h3>
+                    <div class="formulario">
+                        <span>Email:</span>
+                        <input type="email">
+                        <span>Nome:</span>
+                        <input type="text">
+                        <span>Assunto:</span>
+                        <textarea></textarea>
+                        <div class="botao"><button>Enviar</button></div>
+                    </div>
+                </div>
+                <div class="sobreNos">
+                    <div class="box">
+                        <p>O que é Truta Arco-íris?</p>
+                    </div>
+
+                    <div class="box open">
+                        <h4>O que é a TroustSolutions?</h4>
+                        <p>
+                            Somos uma equipe de desenvolvimento que está aqui para auxiliar os truticultores a terem uma
+                            receita maior, com um menor taxa de mortalidade de suas trutas.
+                        </p>
+                    </div>
+
+                    <div class="box">
+                        <p>Por que a TroustSolutions?</p>
+                    </div>
+
+                    <div class="box">
+                        <p>Qual o valor?</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <footer></footer>
 </body>
 
