Atualizando tela de contato

--- a/grupo/Sites/index.html
+++ b/grupo/Sites/index.html
@@ -33,7 +33,7 @@
                 <a href="#">Relatos</a>
             </li>
             <li>
-                <a href="#">Contato</a>
+                <a href="#telaContato">Contato</a>
             </li>
         </ul>
         <ul class="acesso">
@@ -146,7 +146,7 @@
     <div class="container"></div>
     <div class="container"></div>
 
-    <div class="container">
+    <div class="container" id="telaContato">
         <div class="container-contatoGeral">
             <h2>Contato</h2>
             <div class="container-contato">
